--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Mastermind</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <script src="../../Utility/utility.js"></script>
+        <script src="assets/js/utility.js"></script>
         <script src="assets/js/app.js"></script>
     </head>
     <body>
